third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/from-not-source.stderr
error: #[from] is only supported on the source field, not any other field
 --> tests/ui/from-not-source.rs:7:5
  |
7 |     #[from]
  |     ^^^^^^^
