third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/from-not-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub struct Error {
    #[source]
    source: std::io::Error,
    #[from]
    other: anyhow::Error,
}

fn main() {}
